[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/PlayerCharacter.gd" id="1"]

[node name="PlayerCharacter" type="Node2D"]
script = ExtResource("1")

[node name="Body" type="Node2D" parent="."]
position = Vector2(0, 0)

[node name="Torso" type="Polygon2D" parent="Body"]
color = Color(0.2, 0.25, 0.4, 1)
polygon = PackedVector2Array(-45, -20, -40, -30, -20, -38, 0, -40, 20, -38, 40, -30, 45, -20, 48, 0, 45, 40, 35, 60, 20, 65, 0, 68, -20, 65, -35, 60, -45, 40, -48, 0)
antialiased = true

[node name="TorsoHighlight" type="Polygon2D" parent="Body"]
color = Color(0.25, 0.32, 0.48, 0.4)
polygon = PackedVector2Array(-45, -20, -40, -30, -25, -35, -35, 0, -40, 40, -35, 55, -45, 40, -48, 0)
antialiased = true

[node name="Collar" type="Polygon2D" parent="Body"]
color = Color(0.95, 0.95, 0.95, 1)
polygon = PackedVector2Array(-18, -38, 0, -42, 18, -38, 15, -30, 0, -32, -15, -30)
antialiased = true

[node name="Neck" type="Polygon2D" parent="Body"]
color = Color(0.96, 0.85, 0.75, 1)
polygon = PackedVector2Array(-12, -55, 12, -55, 15, -38, -15, -38)
antialiased = true

[node name="Head" type="Node2D" parent="."]
position = Vector2(0, -95)

[node name="Face" type="Polygon2D" parent="Head"]
color = Color(0.96, 0.85, 0.75, 1)
polygon = PackedVector2Array(-35, -25, -32, -35, -20, -42, 0, -45, 20, -42, 32, -35, 35, -25, 38, 0, 35, 25, 28, 38, 15, 42, 0, 44, -15, 42, -28, 38, -35, 25, -38, 0)
antialiased = true

[node name="FaceHighlight" type="Polygon2D" parent="Head"]
color = Color(1, 0.92, 0.85, 0.35)
polygon = PackedVector2Array(-35, -25, -32, -35, -22, -40, -30, 0, -32, 25, -35, 25, -38, 0)
antialiased = true

[node name="EyeL" type="Polygon2D" parent="Head"]
position = Vector2(-14, -5)
color = Color(0.15, 0.15, 0.18, 1)
polygon = PackedVector2Array(-6, -4, -4, -6, 0, -7, 4, -6, 6, -4, 6, 2, 4, 5, 0, 6, -4, 5, -6, 2)
antialiased = true

[node name="EyeR" type="Polygon2D" parent="Head"]
position = Vector2(14, -5)
color = Color(0.15, 0.15, 0.18, 1)
polygon = PackedVector2Array(-6, -4, -4, -6, 0, -7, 4, -6, 6, -4, 6, 2, 4, 5, 0, 6, -4, 5, -6, 2)
antialiased = true

[node name="EyeShineL" type="Polygon2D" parent="Head"]
position = Vector2(-16, -7)
color = Color(1, 1, 1, 0.8)
polygon = PackedVector2Array(-2, -2, 2, -2, 2, 2, -2, 2)
antialiased = true

[node name="EyeShineR" type="Polygon2D" parent="Head"]
position = Vector2(12, -7)
color = Color(1, 1, 1, 0.8)
polygon = PackedVector2Array(-2, -2, 2, -2, 2, 2, -2, 2)
antialiased = true

[node name="Mouth" type="Polygon2D" parent="Head"]
position = Vector2(0, 20)
color = Color(0.85, 0.55, 0.5, 1)
polygon = PackedVector2Array(-8, -2, -4, -4, 0, -3, 4, -4, 8, -2, 6, 2, 0, 4, -6, 2)
antialiased = true

[node name="Hair" type="Node2D" parent="Head"]

[node name="HairBack" type="Polygon2D" parent="Head/Hair"]
color = Color(0.18, 0.12, 0.08, 1)
polygon = PackedVector2Array(-40, -20, -35, -45, -20, -55, 0, -58, 20, -55, 35, -45, 40, -20, 42, 5, 38, -10, 35, -25, 20, -40, 0, -45, -20, -40, -35, -25, -38, -10, -42, 5)
antialiased = true

[node name="HairFront" type="Polygon2D" parent="Head/Hair"]
color = Color(0.22, 0.15, 0.1, 1)
polygon = PackedVector2Array(-32, -35, -25, -48, -10, -52, 5, -50, 18, -48, 28, -42, 32, -35, 25, -32, 15, -38, 0, -40, -15, -38, -25, -32)
antialiased = true

[node name="HairHighlight" type="Polygon2D" parent="Head/Hair"]
color = Color(0.32, 0.22, 0.15, 0.5)
polygon = PackedVector2Array(-30, -40, -22, -50, -8, -52, -15, -45, -25, -38)
antialiased = true

[node name="Arm_L" type="Node2D" parent="."]
position = Vector2(-50, -15)

[node name="UpperArm" type="Polygon2D" parent="Arm_L"]
color = Color(0.2, 0.25, 0.4, 1)
polygon = PackedVector2Array(-15, -12, -8, -18, 5, -15, 10, -8, 12, 5, 10, 25, 5, 35, -5, 38, -12, 35, -18, 20, -18, 5)
antialiased = true

[node name="Forearm" type="Node2D" parent="Arm_L"]
position = Vector2(-5, 40)
rotation = 0.3

[node name="ForearmShape" type="Polygon2D" parent="Arm_L/Forearm"]
color = Color(0.2, 0.25, 0.4, 1)
polygon = PackedVector2Array(-12, -8, -5, -12, 5, -10, 10, -5, 12, 10, 10, 30, 5, 40, -5, 42, -10, 38, -12, 20)
antialiased = true

[node name="Hand" type="Node2D" parent="Arm_L/Forearm"]
position = Vector2(0, 45)

[node name="Palm" type="Polygon2D" parent="Arm_L/Forearm/Hand"]
color = Color(0.96, 0.85, 0.75, 1)
polygon = PackedVector2Array(-12, -8, -8, -12, 0, -14, 8, -12, 12, -8, 14, 0, 12, 12, 8, 18, 0, 20, -8, 18, -12, 12, -14, 0)
antialiased = true

[node name="Arm_R" type="Node2D" parent="."]
position = Vector2(50, -15)

[node name="UpperArm" type="Polygon2D" parent="Arm_R"]
color = Color(0.18, 0.22, 0.35, 1)
polygon = PackedVector2Array(15, -12, 8, -18, -5, -15, -10, -8, -12, 5, -10, 25, -5, 35, 5, 38, 12, 35, 18, 20, 18, 5)
antialiased = true

[node name="Forearm" type="Node2D" parent="Arm_R"]
position = Vector2(5, 40)
rotation = -0.3

[node name="ForearmShape" type="Polygon2D" parent="Arm_R/Forearm"]
color = Color(0.18, 0.22, 0.35, 1)
polygon = PackedVector2Array(12, -8, 5, -12, -5, -10, -10, -5, -12, 10, -10, 30, -5, 40, 5, 42, 10, 38, 12, 20)
antialiased = true

[node name="Hand" type="Node2D" parent="Arm_R/Forearm"]
position = Vector2(0, 45)

[node name="Palm" type="Polygon2D" parent="Arm_R/Forearm/Hand"]
color = Color(0.96, 0.85, 0.75, 1)
polygon = PackedVector2Array(12, -8, 8, -12, 0, -14, -8, -12, -12, -8, -14, 0, -12, 12, -8, 18, 0, 20, 8, 18, 12, 12, 14, 0)
antialiased = true
